--- a/parts/phpsupport/phpinfodlg.ui
+++ b/parts/phpsupport/phpinfodlg.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
 <class>PHPInfoDlg</class>
 <widget class="QDialog">
     <property name="name">
@@ -13,13 +13,12 @@
         </rect>
     </property>
     <property name="caption">
-        <string>Form1</string>
+        <string>PHP Information</string>
     </property>
     <grid>
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-
         <widget class="QMultiLineEdit" row="0" column="0" rowspan="1" colspan="3">
             <property name="name">
                 <cstring>php_edit</cstring>
@@ -32,6 +31,9 @@
             <property name="text">
                 <string>&amp;OK</string>
             </property>
+            <property name="default">
+                <bool>true</bool>
+            </property>
         </widget>
         <spacer row="1" column="2">
             <property name="name">
@@ -43,6 +45,12 @@
             <property name="sizeType">
                 <enum>Expanding</enum>
             </property>
+            <property name="sizeHint">
+                <size>
+                    <width>20</width>
+                    <height>20</height>
+                </size>
+            </property>
         </spacer>
         <spacer row="1" column="0">
             <property name="name">
@@ -53,6 +61,12 @@
             </property>
             <property name="sizeType">
                 <enum>Expanding</enum>
+            </property>
+            <property name="sizeHint">
+                <size>
+                    <width>20</width>
+                    <height>20</height>
+                </size>
             </property>
         </spacer>
     </grid>
