--- a/src/settingswidget.ui
+++ b/src/settingswidget.ui
@@ -19,7 +19,6 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-
         <widget class="QCheckBox" row="0" column="0">
             <property name="name">
                 <cstring>lastProjectCheckbox</cstring>
@@ -56,7 +55,6 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-
                 <widget class="QLayoutWidget">
                     <property name="name">
                         <cstring>Layout10</cstring>
@@ -68,7 +66,6 @@
                         <property name="margin">
                             <number>0</number>
                         </property>
-
                         <widget class="QLabel">
                             <property name="name">
                                 <cstring>buttonLabel_2</cstring>
@@ -120,7 +117,6 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-
                 <widget class="QLayoutWidget">
                     <property name="name">
                         <cstring>Layout9</cstring>
@@ -132,7 +128,6 @@
                         <property name="margin">
                             <number>0</number>
                         </property>
-
                         <widget class="QLabel">
                             <property name="name">
                                 <cstring>buttonLabel</cstring>
@@ -190,7 +185,6 @@
                         <property name="margin">
                             <number>0</number>
                         </property>
-
                         <widget class="QLayoutWidget">
                             <property name="name">
                                 <cstring>Layout6</cstring>
@@ -202,7 +196,6 @@
                                 <property name="margin">
                                     <number>0</number>
                                 </property>
-
                                 <widget class="QLayoutWidget">
                                     <property name="name">
                                         <cstring>Layout3</cstring>
@@ -214,7 +207,6 @@
                                         <property name="margin">
                                             <number>0</number>
                                         </property>
-
                                         <widget class="QCheckBox">
                                             <property name="name">
                                                 <cstring>lineWrappingCheckBox</cstring>
@@ -263,7 +255,6 @@
                                 <property name="name">
                                     <cstring>unnamed</cstring>
                                 </property>
-
                                 <widget class="QRadioButton">
                                     <property name="name">
                                         <cstring>veryShortCompilerOutputRadioButton</cstring>
@@ -275,7 +266,7 @@
                                         <number>0</number>
                                     </property>
                                     <property name="whatsThis" stdset="0">
-                                        <string>Only warnings, errors and the files which are compiled</string>
+                                        <string>Display only warnings, errors and the file names which are compiled.</string>
                                     </property>
                                 </widget>
                                 <widget class="QRadioButton">
@@ -289,7 +280,7 @@
                                         <number>1</number>
                                     </property>
                                     <property name="whatsThis" stdset="0">
-                                        <string>suppresses all the compiler flags, and formats to something readable</string>
+                                        <string>Suppress all the compiler flags and formats to something readable.</string>
                                     </property>
                                 </widget>
                                 <widget class="QRadioButton">
@@ -303,7 +294,7 @@
                                         <number>2</number>
                                     </property>
                                     <property name="whatsThis" stdset="0">
-                                        <string>the unmodified output of the compiler</string>
+                                        <string>Display unmodified compiler output.</string>
                                     </property>
                                 </widget>
                             </vbox>
@@ -368,11 +359,9 @@
     <include location="global" impldecl="in declaration">kfontdialog.h</include>
     <include location="global" impldecl="in declaration">qfont.h</include>
     <include location="global" impldecl="in declaration">qpushbutton.h</include>
-    <include location="local" impldecl="in implementation">settingswidget.ui.h</include>
     <include location="global" impldecl="in implementation">kdialog.h</include>
+    <include location="local" impldecl="in implementation">settingswidget.ui.h</include>
 </includes>
-<layoutdefaults spacing="6" margin="11"/>
-<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <variables>
     <variable>QFont _messageFont;</variable>
     <variable>QFont _applicationFont;</variable>
@@ -385,9 +374,9 @@
     <slot>setMessageFont( const QFont &amp; fnt )</slot>
     <slot>setApplicationFont( const QFont &amp; fnt )</slot>
 </slots>
-
+<layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <includehints>
-    <includehint>qwidget.h</includehint>
     <includehint>kurlrequester.h</includehint>
     <includehint>klineedit.h</includehint>
     <includehint>kpushbutton.h</includehint>
