CVS_SILENT i18n style guide fixes, it's "OK" and not "Ok"

--- a/vcs/cvsservice/commitdialogbase.ui
+++ b/vcs/cvsservice/commitdialogbase.ui
@@ -92,7 +92,7 @@
                         <cstring>buttonOk</cstring>
                     </property>
                     <property name="text">
-                        <string>&amp;Ok</string>
+                        <string>&amp;OK</string>
                     </property>
                     <property name="accel">
                         <string>Alt+O</string>
