--- a/languages/ada/configproblemreporter.ui
+++ b/languages/ada/configproblemreporter.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
 <class>ConfigureProblemReporter</class>
 <widget class="QWidget">
     <property name="name">
@@ -24,7 +24,7 @@
                 <cstring>bgParserCheckbox</cstring>
             </property>
             <property name="text">
-                <string>Enable background parsing</string>
+                <string>&amp;Enable background parsing</string>
             </property>
         </widget>
         <widget class="QSlider">
@@ -78,15 +78,15 @@
     </connection>
 </connections>
 <includes>
-    <include location="local" impldecl="in implementation">configproblemreporter.ui.h</include>
     <include location="global" impldecl="in implementation">kdialog.h</include>
+    <include location="local" impldecl="in implementation">configproblemreporter.ui.h</include>
 </includes>
-<layoutdefaults spacing="6" margin="11"/>
-<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <slots>
     <slot>init()</slot>
     <slot>destroy()</slot>
     <slot>accept()</slot>
     <slot>bgParserCheckbox_toggled( bool b )</slot>
 </slots>
+<layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
